syntax = "proto3";

package services.user.store.svc.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue username = 2;
    google.protobuf.StringValue email = 3;
    google.protobuf.BoolValue is_verified = 4;
    google.protobuf.StringValue profile_picture = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
    google.protobuf.StringValue username = 1;
    google.protobuf.StringValue email = 2;
    google.protobuf.StringValue password = 3;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserByIDRequest {
    google.protobuf.StringValue id = 1;
}

message GetUserByIDResponse {
    User user = 1;
}

message GetUserByEmailRequest {
    google.protobuf.StringValue email = 1;
}

message GetUserByEmailResponse {
    User user = 1;
}

message GetUserByUsernameRequest {
    google.protobuf.StringValue username = 1;
}

message GetUserByUsernameResponse {
    User user = 1;
}